# ChangeLog for dev-util/cwdiff
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/cwdiff/ChangeLog,v 1.11 2015/03/13 20:13:48 ottxor Exp $

  13 Mar 2015; Christoph Junghans <ottxor@gentoo.org> -cwdiff-0.2.5.ebuild,
  -cwdiff-0.2.6.ebuild, -cwdiff-0.2.7.ebuild:
  remove old

*cwdiff-0.2.8 (13 Mar 2015)

  13 Mar 2015; Christoph Junghans <ottxor@gentoo.org> +cwdiff-0.2.8.ebuild:
  version bump

*cwdiff-0.2.7 (09 Mar 2015)

  09 Mar 2015; Christoph Junghans <ottxor@gentoo.org> +cwdiff-0.2.7.ebuild:
  version bump

  13 Mar 2014; Christoph Junghans <ottxor@gentoo.org> cwdiff-0.2.6.ebuild:
  added ~x64-macos (tested by me)

*cwdiff-0.2.6 (17 Jan 2014)

  17 Jan 2014; Christoph Junghans <ottxor@gentoo.org> +cwdiff-0.2.6.ebuild:
  version bump

*cwdiff-0.2.5 (06 Sep 2013)

  06 Sep 2013; Christoph Junghans <ottxor@gentoo.org> +cwdiff-0.2.5.ebuild,
  -cwdiff-0.2.4.ebuild:
  version bump

  01 Sep 2013; Christoph Junghans <ottxor@gentoo.org> -cwdiff-0.2.2.ebuild,
  -cwdiff-0.2.3.ebuild:
  remove old

*cwdiff-0.2.4 (31 Aug 2013)

  31 Aug 2013; Christoph Junghans <ottxor@gentoo.org> +cwdiff-0.2.4.ebuild:
  version bump

  23 Jan 2013; Christoph Junghans <ottxor@gentoo.org> cwdiff-0.2.3.ebuild:
  added ~arm and ~amd64-linux

*cwdiff-0.2.3 (22 Dec 2012)

  22 Dec 2012; Christoph Junghans <ottxor@gentoo.org> +cwdiff-0.2.3.ebuild:
  version bump

*cwdiff-0.2.2 (09 Dec 2012)

  09 Dec 2012; Christoph Junghans <ottxor@gentoo.org> +cwdiff-0.2.2.ebuild,
  +metadata.xml:
  initial commit