@@ -2,17 +2,19 @@
 Hash: SHA256
 
 DIST cwdiff-0.2.8.tar.gz 4246 SHA256 cdfd1489420591b36a56370c647b361f87c0c4074fed220e9c09f3e7ea8f2c22 SHA512 bb1fb3790cc2d8f4e5f199e7abc9bf6a999ded0d25fc9e62ca1e003505f1d33b6c8575b0172a2e55128c4e5c853147304c928d0f1094c5b30e6a015b9fbcae09 WHIRLPOOL 7dec074fa079bb1468179efe6f559010b2d8267343ea5c77ad72810301baf49cb63977c7617bdc41321c944fdd067c6202d8a87b6bd5200f561176fac2fc115a
+DIST cwdiff-0.3.0.tar.gz 4666 SHA256 32c70aeae4e445a439aeed7f9b01395cc74645033533cc37b6974671cf2cfd9b SHA512 40401a0541209c83cd78ff55c62ce71dd362cf8674b07c1cdd56ad7a505741e818003f07c87fe0303cd2bfd911d99b8f560697612b32b6fee794a7671e7e86f0 WHIRLPOOL aad2e3c5c6d8dc94f70c8b272969598bf134f73bc0fc030d5f4087d341a2074736e5b409afc99c8039f250c2f0154b22d86b153e7ac3e4edc12f4c0642be2e76
 EBUILD cwdiff-0.2.8.ebuild 841 SHA256 7c3e1d3529168f1889e4f31132a8c9f8d7f39bd12d6db2cb8c1592e419287c5c SHA512 d78805aa094c8b0a842e00b453f3de64fcb46b5095a229de660b1f3aafecf84ac886c23b88f626487d8707c3cad0f5d10235b1db03d266f9fd5d2145ea27b713 WHIRLPOOL 0ec1594e3649f2db1e83b20085bda76bbd0b4d36ed3125b0a647582c95d5a0a87a97e3c39c04b017f26f8ed85478e7c89f23000efb608d8a808409e42de02731
-MISC ChangeLog 1559 SHA256 c6b6ee1d1d0d3e149cd2dec895498183d7209bbe1acca7169ebdaed26a416218 SHA512 b197c50e3b7a11df7fec7d49d0b1e1dcfdc0ebcb6b64469db8fa0a65f8aec3a6a56d04d5e57d27f020cdf9cf04931118958a235cba327e98f6f4e28b2ad26c51 WHIRLPOOL 8b60b3396ebcfcbc8b9e8295b4ab4d2ef85bec8bfebefc25b6547b857aade3a2c687fab1c29d801fd8aa3edea25a4a0e99660441a88718863fc28d4c3826ffc4
-MISC metadata.xml 502 SHA256 d4f22b7a3e1f5f00bd734698e298efa7824115c27a4010092d3abfb251909715 SHA512 856ff98b847d843ce18036a6ed258196ecd78755e4f79b8724b173ec6a35d9b5c0e226d61b1ea1ab75d0c4dca7a60f02ae49c5967d1c8bc7de66a9a8438a3c5c WHIRLPOOL be2e6803b9866862407e3fd4bf0c3c67778abb74cbecc9169b766ac26577b497801475c54c6ca05fa5a12bb9c6509350fb028f7786a4b2902299d74d7cc4eeae
+EBUILD cwdiff-0.3.0.ebuild 1000 SHA256 9052ce45e4fc82ca42abefdee8f688ef2b44ef5fd3ec3b85e1bca8cf1a6b7b58 SHA512 772d29ded39247b392dd1c6bc356a439f0435d2f120e3b0a57dcc2901e37db457a0bdb6617d00d609bb9d8901e9a51c256dd9a0db30ab0a5eebe037f79dc983f WHIRLPOOL 2ab6b419a9ccb5db71276b2ed2eb536ddf4b2893367d6dc4d872d7d770f7f892926014d7ed3c81977eff24d551ac9197fe510e61e2796cf12f8052d7c3db91a1
+MISC ChangeLog 1772 SHA256 c26a6d72592647c2981d9c43b5b0a9e368fe935a2d0345f446a35e57bd8b9566 SHA512 c7a064e06fc9491c591f099ea9d0be704487b14286dc4f78792503dd6e32f10a176d0c165df59b2ffe9f1ed6c2da5324c431caf39b85ced1df2d56d96feded0d WHIRLPOOL 599e4871bee99955b4f315d51aaac2dcdf46403e4e95b5c2c1cb056319e8b4adcf48b3c864246588a7ad983469234ce6b69341599fc6fa27487e0ba543706882
+MISC metadata.xml 502 SHA256 59479d5892fe1c7d76dd724c42f34e6f5179fdac3d5c3237aee682cf54f8d976 SHA512 7d3d8e49f6263aa75c2e77c76221915b326c9dfb67532a7aa2224dc7f2fbb736d78cd3b9cc7c8b70db596e2206f819fa7bfab6cfd714f22e8245671c50e1c4a4 WHIRLPOOL 73151cc698a2c9cc39da4ea29f756b3fe1a04fd6a349f5334983648312294a301587d11d37fcb8c3656566e2e4390d6156105a17dff53baa626ea5fad832786b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJVA0T9AAoJEOeBhlrCAAWGKK4IAI97sl/KuDlKIqxX/DcUjDTu
-fcgzEkmOpJ4W7xD5KH1/UANDuf/SjipA2eUHvEa3j44SICEz5FZME/6pkpn3XC4f
-NXKQrdYAx1vGcN83Kwc10v3TW5Poz2pphDCTug67O4yZPMEq9lHbfCvLN2Q7vjgL
-Ldsv1zgr4RiO/OfqYX2ADtXdtayidqbFOMY5cFQ6RxRpNhuwQMrf0zeXgCHP6sem
-ML30yWHcrdYOF0iw7EvKF5A/UpTK83reSofRV8kVDg6V3G1cHMXIoyf9jD4tex4y
-B2DXGozuyko5uFzHNs1dEkPRmXqtOBXFV7sBqXAkHcANn5yQlUkj6JSQyDFEp/I=
-=ToEd
+iQEcBAEBCAAGBQJVBjYWAAoJEOeBhlrCAAWGbg0IAKVBX49eiHd/1vFr2IySmoxW
+xjludGWJ+PL1PYqUalAmfAsdlPCOZtTvF2Rm05XU4YMgCZEqdCN/8pRrvyL1bVYH
+eOGam5kkk2xhuYAxs/Sp+laeK72PMOqkfuRMoLVeQ/1YkJPY6I2XhYEKPxExsH93
+rdPkg1d7ncJXutVUgI7pygt6aSflV0S0w+GY//p2Gqom+ZcHyaPT/fGi0+4pUbF4
+ZeiXWBaiChttyC7T7V6j8ddYeYfaWNpAA7SWLkf/UbOFF7UuQzhvAVm2k5HONGJ1
+4Dpk+1loOXqkSE7mhzbreA/v2VjzsbqxulNzzEcHbaM0mGPsMxp3X8Oo49n5eMc=
+=bidH
 -----END PGP SIGNATURE-----
