@@ -1,6 +1,14 @@
 # ChangeLog for dev-util/cwdiff
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/cwdiff/ChangeLog,v 1.11 2015/03/13 20:13:48 ottxor Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/cwdiff/ChangeLog,v 1.13 2015/03/16 01:47:00 ottxor Exp $
+
+  16 Mar 2015; Christoph Junghans <ottxor@gentoo.org> metadata.xml:
+  updated metadata.xml
+
+*cwdiff-0.3.0 (16 Mar 2015)
+
+  16 Mar 2015; Christoph Junghans <ottxor@gentoo.org> +cwdiff-0.3.0.ebuild:
+  version bump
 
   13 Mar 2015; Christoph Junghans <ottxor@gentoo.org> -cwdiff-0.2.5.ebuild,
   -cwdiff-0.2.6.ebuild, -cwdiff-0.2.7.ebuild:
